@@ -1138,6 +1138,8 @@ class DOMFunctionArgument(DOMElement):
         self.is_varargs = False
         self.is_array = False
         self.array_bounds = None
+        self.is_implicit_default = False  # Set if this argument should not be exposed, but always treated as default
+        #                                   (see mod_generate_default_argument_functions)
 
     # Parse tokens from the token stream given
     @staticmethod
@@ -1250,6 +1252,8 @@ class DOMFunctionArgument(DOMElement):
             result += " (array type)"
         if self.default_value_tokens is not None:
             result += " Default=" + collapse_tokens_to_string(self.default_value_tokens)
+        if self.is_implicit_default:
+            result += " (implicit default)"
         return result
 
 
@@ -1330,6 +1334,8 @@ class DOMFunctionDeclaration(DOMElement):
         self.accessibility = None  # The function accessibility (if part of a class)
         self.original_class = None  # The class this function belonged to pre-flattening
         #                             (set when functions are flattened)
+        self.is_default_argument_helper = False  # Set if this is an autogenerated function with arguments defaulted
+        #                                         (see mod_generate_default_argument_functions)
 
     # Parse tokens from the token stream given
     @staticmethod
@@ -1586,6 +1592,8 @@ class DOMFunctionDeclaration(DOMElement):
         if len(self.arguments) > 0:
             first_arg = True
             for arg in self.arguments:
+                if arg.is_implicit_default:
+                    continue  # Skip anything that is implicitly defaulted
                 if not first_arg:
                     declaration += ", "
                 declaration += arg.to_c_string(context)
@@ -1993,6 +2001,13 @@ class DOMComment(DOMElement):
     def to_c_string(self):
         return self.comment_text
 
+    # Generate a comment from a string (string must include // or /* */)
+    @staticmethod
+    def from_string(comment_text):
+        comment = DOMComment()
+        comment.comment_text = comment_text
+        return comment
+
     # Write this element out as C code
     def write_to_c(self, file, indent=0, context=WriteContext()):
         if context.for_implementation:
@@ -2119,6 +2134,10 @@ class DOMClassStructUnion(DOMElement):
 
         if self.name is not None:
             declaration += " " + self.name
+            # We need the struct name to be different from the typedef name to prevent compiler complaints about
+            # forward declarations not matching
+            if context.for_c:
+                declaration += "_t"
 
         # Add base classes
         if self.base_classes is not None:
@@ -2137,22 +2156,11 @@ class DOMClassStructUnion(DOMElement):
             else:
                 write_c_line(file, indent, "};")
         else:
-            # Forward-declarations need to be C++-compatible, so we have this ugliness
-            # Todo: Less ugliness
-
-            if context.for_c:
-                write_c_line(file, 0, "#ifdef __cplusplus")
-                self.write_to_c(file, indent)  # Write C++-compatible declaration
-                write_c_line(file, 0, "#else")
-
             if context.for_c and (self.name is not None):
                 write_c_line(file, indent, declaration + " " + self.name + ";" +
                              self.get_attached_comment_as_c_string())
             else:
                 write_c_line(file, indent, declaration + ";" + self.get_attached_comment_as_c_string())
-
-            if context.for_c:
-                write_c_line(file, 0, "#endif")
 
     def __str__(self):
         if self.name is not None:
