@@ -12,7 +12,10 @@
 // Wrap this in a namespace to keep in separate from the C++ API
 namespace cimgui
 {
+extern "C"
+{
 #include "cimgui.h"
+}
 }
 
 // Helper functions
