@@ -32,3 +32,4 @@ Added class member accessibility support
 Removed IM_VEC2_CLASS_EXTRA/IM_VEC4_CLASS_EXTRA from generated file
 Added metadata generator
 Fixed comments getting incorrectly treated as part of the expression for preprocessor conditionals
+Added generation of helper functions with defaulted arguments
